Now manager can send documents required for tour to clients email. Documents required for request and documents required for tour now stored in different folders. Entity Passport, RequestPassport etc. is replaced by TourDocument, RequestTourDocument.